Preparação do multiselect no datable primefaces do cadastro de setores

--- a/src/main/webapp/setorcadastro.xhtml
+++ b/src/main/webapp/setorcadastro.xhtml
@@ -49,7 +49,7 @@
 									Voltar
 								</button>	
 								
-								<span/>					
+								<p:spacer width="10"/>					
 
 								<button class="btn btn-lg btn-info" type="submit" jsf:id="btnSalvar"
 									jsf:action="#{setorCadastroBean.salvar()}" onclick="handleDisableButton">
