--- a/src/main/webapp/setor.xhtml
+++ b/src/main/webapp/setor.xhtml
@@ -43,13 +43,13 @@
 							<button class="btn btn-white btn-danger" type="button" 
 								data-toggle="modal" 
 								data-target="#modalExclusao" 
-								data-mensagem="#{setorBean.mensagemExclusao()}"
 								jsf:id="btnExcluirSelecao" 
 								jsf:rendered="#{setorBean.isExisteSelecao()}">
 								<i class="fa fa-trash"></i> Excluir Seleção
 								<f:ajax
+									listener="#{setorBean.mensagemExclusaoBuilder()}"
 									execute="@this"
-									render="btnConfirmaExclucao"/>
+									render="btnConfirmaExclucao mensagem"/>
 							</button>
 							
 						</div>
@@ -128,13 +128,12 @@
 							<button type="button" class="btn btn-sm btn-danger btn-white btn-round" 
 								data-toggle="modal" 
 								data-target="#modalExclusao" 
-								data-mensagem="Excluir permanentemente o setor selecionado ?"
 								jsf:id="btnExcluir"
 								jsf:rendered="#{!setorBean.isExisteSelecao()}">							
 								<i class="ace-icon fa fa-trash bigger-110 danger"></i>
 								<f:ajax
 									execute="@this"
-									render="btnConfirmaExclucao"
+									render="btnConfirmaExclucao mensagem"
 									listener="#{setorBean.selecionaSetor(setor)}"/>
 							</button>
 						</p:column>
@@ -167,8 +166,8 @@
 
 
 					<div class="modal-body">
-						<div id="mensagem" class="alert alert-info bigger-110">
-							These items will be permanently deleted and cannot be recovered.
+						<div jsf:id="mensagem" class="alert alert-info bigger-110">
+							<h:outputText value="#{setorBean.mensagemExclusao}" />
 						</div>
 
 						<div class="space-6"></div>
@@ -202,15 +201,7 @@
 	<ui:define name="pagina">Setores</ui:define>
 
 	<ui:define name="scripts">
-		<script>
-			$('#modalExclusao').on('show.bs.modal', function (event) {
-				  var button = $(event.relatedTarget);
-				  var mensagem = button.data('mensagem');
-				  var modal = $(this)
-				  modal.find('#mensagem').text(mensagem)
-				});
 
-		</script>
 	</ui:define>
 	
 </ui:composition>
