--- a/src/main/webapp/pagamentocadastroparcela.xhtml
+++ b/src/main/webapp/pagamentocadastroparcela.xhtml
@@ -41,7 +41,9 @@
 			<div class="ui-g-12">
 			
 				<form jsf:id="formParcela" jsf:prependId="false">
-					<p:messages />
+					<p:messages closable="true" globalOnly="true" showIcon="false">
+						<p:autoUpdate/>
+					</p:messages>
 					
 					<div class="widget-box">
 						<div class="widget-header">
@@ -106,6 +108,7 @@
 													jsf:binding="#{vencimento}" 
 													jsf:value="#{pagamentoParcelaBean.parcela.vencimento}">
 													<f:convertDateTime pattern="yyyy-MM-dd"/>
+												</input>
 												<span class="input-group-addon">
 													<i class="fa fa-calendar bigger-110"></i>
 												</span>
@@ -125,6 +128,7 @@
 												jsf:binding="#{valor}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.valor}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="valor"/> 
 											</div>
@@ -139,6 +143,7 @@
 												jsf:binding="#{desconto}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.desconto}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="desconto"/> 
 											</div>
@@ -155,6 +160,7 @@
 												jsf:binding="#{juros}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.juros}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="juros"/> 
 											</div>
@@ -169,6 +175,7 @@
 												jsf:binding="#{mora}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.mora}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="mora"/> 
 											</div>
@@ -183,6 +190,7 @@
 												jsf:binding="#{outros}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.outros}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="outros"/> 
 											</div>
