Lançamento de contas a pagar (pagamento e parcelas)

--- a/src/main/webapp/pagamentoparcelaexclusaodialog.xhtml
+++ b/src/main/webapp/pagamentoparcelaexclusaodialog.xhtml
@@ -30,7 +30,7 @@
 
 					<div class="modal-body">
 						<div class="alert alert-info bigger-110">
-							<h:outputText id="mensagem" value="#{pagamentoCadastroBean.parcela.parcela}" />
+							<h:outputText id="mensagem" value="#{pagamentoCadastroBean.pagamento.idPagamento}" />
 						</div>
 
 						<div class="space-6"></div>
