--- a/src/main/webapp/pagamento.xhtml
+++ b/src/main/webapp/pagamento.xhtml
@@ -62,9 +62,9 @@
 							<h:outputText value="#{pagamento.historico}"/>
 						</p:column>
 						
-						<p:column sortBy="#{pagamento.saldoDevedor}" width="10%">
+						<p:column sortBy="#{pagamento.saldoDevedor()}" width="10%">
 							<f:facet name="header">Saldo em Aberto</f:facet>
-							<h:outputText value="#{pagamento.saldoDevedor}">
+							<h:outputText value="#{pagamento.saldoDevedor()}">
 								<f:convertNumber type="currency"/>
 							</h:outputText>
 						</p:column>
