--- a/src/main/webapp/baixacadastro.xhtml
+++ b/src/main/webapp/baixacadastro.xhtml
@@ -119,6 +119,7 @@
 													jsf:binding="#{vencimento}" 
 													jsf:value="#{baixaCadastroBean.parcela.vencimento}">
 													<f:convertDateTime pattern="yyyy-MM-dd"/>
+												</input>
 												<span class="input-group-addon">
 													<i class="fa fa-calendar bigger-110"></i>
 												</span>
@@ -138,6 +139,7 @@
 												jsf:binding="#{valorParcela}" 
 												jsf:value="#{baixaCadastroBean.parcela.valor}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="valorParcela"/> 
 											</div>
@@ -152,6 +154,7 @@
 												jsf:binding="#{desconto}" 
 												jsf:value="#{baixaCadastroBean.parcela.desconto}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="desconto"/> 
 											</div>
@@ -168,6 +171,7 @@
 												jsf:binding="#{juros}" 
 												jsf:value="#{baixaCadastroBean.parcela.juros}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="juros"/> 
 											</div>
@@ -182,6 +186,7 @@
 												jsf:binding="#{mora}" 
 												jsf:value="#{baixaCadastroBean.parcela.mora}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="mora"/> 
 											</div>
@@ -196,6 +201,7 @@
 												jsf:binding="#{outros}" 
 												jsf:value="#{baixaCadastroBean.parcela.outros}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="outros"/> 
 											</div>
@@ -213,6 +219,7 @@
 													jsf:binding="#{dtPgto}" 
 													jsf:value="#{baixaCadastroBean.quitacao.dtPgto}">
 													<f:convertDateTime pattern="yyyy-MM-dd"/>
+												</input>
 												<span class="input-group-addon">
 													<i class="fa fa-calendar bigger-110"></i>
 												</span>
@@ -241,6 +248,7 @@
 												jsf:binding="#{valor}" 
 												jsf:value="#{baixaCadastroBean.quitacao.valor}">
 												<f:convertNumber type="currency"/>
+											</input>
 											<div class="help-block col-xs-12 col-sm-reset inline"> 
 												<h:message for="valor"/> 
 											</div>
