Criação do formulário de login

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -48,11 +48,9 @@
 						<div class="login-container">
 							<div class="center">
 								<h1>
-									<i class="ace-icon fa fa-leaf green"></i>
-									<span class="red">Ace</span>
-									<span class="white" id="id-text2">Application</span>
+									<i class="ace-icon fa fa-money green"></i>
+									<span class="blue" id="id-text2">Agenda Financeira</span>
 								</h1>
-								<h4 class="blue" id="id-company-text">Company Name</h4>
 							</div>
 
 							<div class="space-6"></div>
@@ -60,10 +58,14 @@
 							<div class="position-relative">
 								<div id="login-box" class="login-box visible widget-box no-border">
 									<div class="widget-body">
-										<div class="widget-main">
+										<div class="widget-main center">
+											<h:panelGroup rendered="#{param.erro != null}">
+												<p>Dados inválidos.</p>
+											</h:panelGroup>
+										
 											<h4 class="header blue lighter bigger">
-												<i class="ace-icon fa fa-coffee green"></i>
-												Please Enter Your Information
+												<i class="ace-icon fa fa-key green"></i>
+												Entre com seu login
 											</h4>
 
 											<div class="space-6"></div>
@@ -72,14 +74,26 @@
 												<fieldset>
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input jsf:id="username" type="text" class="form-control" placeholder="Username" />
+															<input 
+																jsf:id="username"
+																jsf:binding="#{username}" 
+																jsf:value="#{sessionBean.usuarioLogado.login}" 
+																type="text" 
+																class="form-control" 
+																placeholder="Username" />
 															<i class="ace-icon fa fa-user"></i>
 														</span>
 													</label>
 
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input jsf:id="password" type="password" class="form-control" placeholder="Password" />
+															<input 
+																jsf:id="password"
+																jsf:binding="#{password}" 
+																jsf:value="#{sessionBean.usuarioLogado.senha}" 
+																type="password" 
+																class="form-control" 
+																placeholder="Password" />
 															<i class="ace-icon fa fa-lock"></i>
 														</span>
 													</label>
@@ -94,6 +108,7 @@
 
 														<button 
 															jsf:id="enviar" 
+															jsf:action="#{sessionBean.login()}"
 															type="submit" 
 															class="width-35 pull-right btn btn-sm btn-primary">
 															<i class="ace-icon fa fa-key"></i>
@@ -113,14 +128,6 @@
 
 							</div><!-- /.position-relative -->
 
-							<div class="navbar-fixed-top align-right">
-								<br />
-								<a id="btn-login-dark" href="#">Dark</a>
-								<span class="blue">/</span>
-								<a id="btn-login-blur" href="#">Blur</a>
-								<span class="blue">/</span>
-								<a id="btn-login-light" href="#">Light</a>
-							</div>
 						</div>
 					</div><!-- /.col -->
 				</div><!-- /.row -->
