Refatoração das views pagamento, baixa e usuario para uso em pastas

--- a/src/main/webapp/pagamento/pagamento.xhtml
+++ b/src/main/webapp/pagamento/pagamento.xhtml
@@ -10,7 +10,7 @@
 
 <h:head/>
 
-<ui:composition template="resources/template/aceadmin.xhtml">
+<ui:composition template="/resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
 		<li class="active">Contas a Pagar</li>
@@ -32,7 +32,7 @@
 
 					<p:toolbar>
 						<f:facet name="left">
-							<p:button value="Novo" icon="fa fa-plus" outcome="/pagamentocadastro.xhtml"/>
+							<p:button value="Novo" icon="fa fa-plus" outcome="/pagamento/pagamentocadastro.xhtml"/>
 						</f:facet>
 						
 						<f:facet name="right">
