--- a/src/main/webapp/usuario/usuariocadastro.xhtml
+++ b/src/main/webapp/usuario/usuariocadastro.xhtml
@@ -10,7 +10,7 @@
 
 <h:head/>
 
-<ui:composition template="resources/template/aceadmin.xhtml">
+<ui:composition template="/resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
 		<li>
@@ -42,7 +42,7 @@
 					<div class="widget-box">
 						<div class="widget-header">
 							<div class="widget-main">
-								<button class="btn btn-lg btn-purple" type="button" jsf:outcome="usuario.xhtml">	
+								<button class="btn btn-lg btn-purple" type="button" jsf:outcome="/usuario/usuario.xhtml">	
 									<i class="ace-icon fa fa-arrow-left"></i>
 									Voltar
 								</button>	
