--- a/src/main/webapp/baixa/baixa.xhtml
+++ b/src/main/webapp/baixa/baixa.xhtml
@@ -10,7 +10,7 @@
 
 <h:head/>
 
-<ui:composition template="resources/template/aceadmin.xhtml">
+<ui:composition template="/resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
 		<li class="active">Baixa</li>
@@ -32,7 +32,7 @@
 
 					<p:toolbar>
 						<f:facet name="left">
-							<p:button value="Baixar" icon="fa fa-plus" outcome="/baixacadastro.xhtml"/>
+							<p:button value="Baixar" icon="fa fa-plus" outcome="/baixa/baixacadastro.xhtml"/>
 						</f:facet>
 						
 						<f:facet name="right">
