--- a/src/main/webapp/usuario/usuario.xhtml
+++ b/src/main/webapp/usuario/usuario.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<ui:composition template="resources/template/aceadmin.xhtml">
+<ui:composition template="/resources/template/aceadmin.xhtml">
 
 	<ui:define name="navegacao">
 		<li class="active">Usuários</li>
@@ -28,7 +28,7 @@
 
 					<p:toolbar>
 						<f:facet name="left">
-							<p:button value="Novo" icon="fa fa-plus" outcome="/usuariocadastro.xhtml"/>
+							<p:button value="Novo" icon="fa fa-plus" outcome="/usuario/usuariocadastro.xhtml"/>
 						</f:facet>
 						
 						<f:facet name="right">
