--- a/src/main/webapp/setor/setor.xhtml
+++ b/src/main/webapp/setor/setor.xhtml
@@ -35,8 +35,9 @@
 					<div class="clearfix form-actions ui-widget-header" style="margin-bottom: 0;" jsf:id="comandoGrid">
 						<div class="col-md-6">
 
-							<button class="btn btn-white btn-primary" type="button" jsf:id="btnNovo" jsf:outcome="/setorcadastro.xhtml">
-								<i class="fa fa-plus"></i> Novo
+							<button class="btn btn-white btn-primary" type="button" jsf:id="btnNovo" jsf:outcome="/setor/setorcadastro.xhtml">
+								<i class="fa fa-plus"></i> 
+								Novo
 							</button>
 							
 							<p:spacer width="10"/>
