Caixa de diálogo para o relatório de contas a pagar

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -75,7 +75,7 @@
 												<fieldset>
 													<label class="block clearfix">
 														<span class="block input-icon input-icon-right">
-															<input 
+															<input autofocus="autofocus"
 																jsf:id="username"
 																jsf:binding="#{username}" 
 																jsf:value="#{sessionBean.usuarioLogado.login}" 
