Refatoração do cadastro de fornecedores e seus contatos. Criação da classe DataUtil com métodos státicos, para operações com datas

--- a/src/main/webapp/conta/conta.xhtml
+++ b/src/main/webapp/conta/conta.xhtml
@@ -60,7 +60,7 @@
 							<div class="input-group">
 								<input class="form-control input-mask-date" type="text" 
 									placeholder="Pesquisa por..."
-									jsf:value="#{contaBean.pesquisaDescricao}" />
+									jsf:value="#{contaBean.pesquisaFiltro}" />
 								<span class="input-group-btn">
 									<button class="btn btn-inverse btn-white" type="submit" jsf:action="#{contaBean.pesquisar()}" jsf:update="@form">
 										<i class="ace-icon fa fa-search bigger-110"></i>
