--- a/src/main/webapp/setor/setor.xhtml
+++ b/src/main/webapp/setor/setor.xhtml
@@ -61,7 +61,7 @@
 							<div class="input-group">
 								<input class="form-control input-mask-date" type="text" 
 									placeholder="Pesquisa por..."
-									jsf:value="#{setorBean.pesquisaDescricao}" />
+									jsf:value="#{setorBean.pesquisaFiltro}" />
 								<span class="input-group-btn">
 									<button class="btn btn-inverse btn-white" type="submit" jsf:action="#{setorBean.pesquisar()}" jsf:update="@form">
 										<i class="ace-icon fa fa-search bigger-110"></i>
