--- a/src/main/webapp/relatorios/pagamentosefetuados.xhtml
+++ b/src/main/webapp/relatorios/pagamentosefetuados.xhtml
@@ -45,7 +45,7 @@
 										<div class="row">
 											<div class="col-sm-6">
 												<div class="form-group">
-													<label class="control-label" jsf:for="emissao">Data Inicial</label>
+													<label class="control-label" jsf:for="dataInicial">Data Inicial</label>
 													<div class="input-group">
 														<input type="date" class="form-control" 
 															jsf:id="dataInicial"
@@ -61,7 +61,7 @@
 											</div>
 											<div class="col-sm-6">
 												<div class="form-group">
-													<label class="control-label" jsf:for="emissao">Data Final</label>
+													<label class="control-label" jsf:for="dataFinal">Data Final</label>
 													<div class="input-group">
 														<input type="date" class="form-control" 
 															jsf:id="dataFinal"
