Correção do formulário de pagamentos e continuação da prototipação do formulário de parcelamento

--- a/src/main/webapp/pagamento/pagamentocadastro.xhtml
+++ b/src/main/webapp/pagamento/pagamentocadastro.xhtml
@@ -320,7 +320,7 @@
 													</h:outputText>
 												</td>
 												<td>
-													<h:outputText value="#{parcela.totalParcela}" >
+													<h:outputText value="#{parcela.totalParcela()}" >
 														<f:convertNumber type="currency"/>
 													</h:outputText>
 												</td>
