--- a/src/main/webapp/pagamento/pagamentoparcelasmultiplas.xhtml
+++ b/src/main/webapp/pagamento/pagamentoparcelasmultiplas.xhtml
@@ -90,24 +90,11 @@
 											</div>
 										</div>
 									</div>
-										
-									<div class="row">
-										<div class="col-sm-12">
-											<div class="form-group">
-												<label class="control-label" jsf:for="diaMes">Dia do Mês</label>
-												<input type="number" class="form-control"
-													jsf:id="diaMes"
-													jsf:binding="#{diaMes}" 
-													jsf:value="#{pagamentoParcelaBean.parcela.parcela}">
-												</input>
-											</div>
-										</div>	
-									</div>
 									
 									<div class="row">
 										<div class="col-sm-6">
 											<div class="form-group">
-												<label class="control-label" jsf:for="dataInicial">Data Inicial</label>
+												<label class="control-label" jsf:for="dataInicial">1º Vencimento</label>
 												<div class="input-group">
 													<input type="date" class="form-control" 
 														jsf:id="dataInicial"
