Multiplos lançamentos por: Mesal com uma parcela por lançamento, mensal com várias parcelas por lançamento e parceças por intervalos de dias

--- a/src/main/webapp/pagamento/pagamentocadastroparcela.xhtml
+++ b/src/main/webapp/pagamento/pagamentocadastroparcela.xhtml
@@ -80,7 +80,7 @@
 									<div class="col-sm-4">
 										<div class="form-group">
 											<label class="control-label" jsf:for="nrParcela">Parcela</label>
-											<input type="text" class="form-control" 
+											<input type="text" class="form-control" autofocus="autofocus"
 												jsf:id="nrParcela"
 												jsf:binding="#{nrParcela}" 
 												jsf:value="#{pagamentoParcelaBean.parcela.parcela}"/>
