--- a/src/main/webapp/pagamento/pagamentocadastro.xhtml
+++ b/src/main/webapp/pagamento/pagamentocadastro.xhtml
@@ -233,7 +233,7 @@
 
 						<div class="widget-body">
 							<div class="widget-main no-padding">
-								<table class="table table-striped table-bordered table-hover">
+								<table jsf:id="tabela" class="table table-striped table-bordered table-hover">
 									<thead class="thin-border-bottom">
 										<tr>
 											<th>
